# group4

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini  graphics_client.cpp
.github/workflows/: ci.yml
art/models/: battery.fbx  chair.fbx  desk.fbx  exit_sign.fbx  exit_square.fbx  green_animated.fbx  laptop.fbx  shelf.fbx  table.fbx
art/models/animation/running/: boy.fbx  boy_running.fbx  girl.fbx  girl_running.fbx
art/models/animation/walking/: alien_rename.fbx  boy.fbx  boy_walking.fbx  boy_walkling.fbx  girl.fbx  girl_walking.fbx  girl_walking_no_backpack.fbx  green_alien.glb  green_alien_walking.fbx  mint_alien.glb  pink_alien.glb  purple_alien.glb
art/models/character/: boy_sitting.fbx  boy_standing.fbx  girl_sitting.fbx  girl_standing.fbx  green_alien.fbx  mint_alien.fbx  pink_alien.fbx  purple_alien.fbx
art/models/environment/: floor6_empty.fbx  geisel_exterior.fbx
art/models/text/: player_name.fbx  start_game.fbx
diagrams/: game_states.puml
game/: aabb.cpp  batteries_stat  client_core.cpp  client_main_test.cpp  collider.cpp  floor2  floor2Data  floor2_8  floor2_reduced  game_logic_client.cpp  game_logic_pg.cpp  game_state.cpp  map_stat  packet.cpp  physics_world.cpp  player_object.cpp  server_core.cpp  server_main_test_npc.cpp  stat - test  student_npc.cpp  visualize_bb.ipynb
graphics/: camera.cpp  cube.cpp  fonts.cpp  glad.c  graphics.cpp  image.cpp  input.cpp  mesh.cpp  model.cpp  shader.cpp  skeleton.cpp  window.cpp
include/: camera.h  client.h  client_core.h  colliders.h  constants.h  core.h  cube.h  drawable.h  enums.h  fonts.h  game_object.h  game_state.h  game_state_packet.h  graphics.h  image.h  input.h  input_packet.h  mesh.h  model.h  packet.h  physics_world.h  random_float.h  server.h  server_core.h  shader.h  skeleton.h  student_npc.h  window.h  windows_socket.h
include/assimp/: .gitignore
include/glad/: glad.h
include/packets/: game_state_packet.h  input_packet.h  packet.h  server_heartbeat_packet.h  vote_packet.h
include/physics/: aabb.h  collider.h  game_object.h  physics_world.h  plane.h
lib/: glfw3.lib  zlibstatic.lib
networking/: README.md  client.cpp  client.h  network_sandbox.cpp  server.cpp  server.h  windows_socket.h
packets/: game_state_packet.cpp  input_packet.cpp  packet.cpp  server_heartbeat_packet.cpp  vote_packet.cpp
physics/: colliders.h  game_object.h  physics_world.h
shaders/: shader.frag  shader.vert  shader_anim.vert  static_image.frag  static_image.vert
src/: glad.c  graphics_client.cpp  window.cpp
tests/: clientcore_test.cpp  game_state_packet_test.cpp  input_packet_test.cpp  network_test.cpp  npc_movements_test.cpp  npc_update_test.cpp  server_heartbeat_packet_test.cpp  servercore_test.cpp  vote_packet_test.cpp
